--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,6 +58,7 @@
                 document.body.classList.add('active')
             });
         } else {
+            document.body.classList.remove('active')
         }
     })();
 </script>
