--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 	{% include head.html %}
 </head>
-<body class="active">
+<body>
 	{% if page.cover-image %}
 	<div class="cover-image-container">
 		<img alt="Cover image" src="{{ site.baseurl }}/img/covers/{{ page.cover-image }}">
