--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,7 +58,9 @@
                 document.body.classList.add('active')
             });
         } else {
-            document.body.classList.remove('active')
+            window.addEventListener("DOMContentLoaded", function() {
+                document.body.classList.remove('active')
+            }
         }
     })();
 </script>
